# GP2CourseworkSJATGS

./: .clang_complete  .gitignore  CMakeLists.txt  settings.xml
GameApplication/: CMakeLists.txt
GameApplication/Utils/: CMakeLists.txt
GameApplication/Utils/include/: CommandLineParser.h  Log.h  NonCopyable.h  OptionParser.h  ProgramOptions.h  Timer.h  Utils.h  XMLOptionsParser.h  clock.h
GameApplication/Utils/src/: CommandLineParser.cpp  Log.cpp  ProgramOptions.cpp  Timer.cpp  XMLOptionsParser.cpp  clock.cpp
GameApplication/include/: Common.h  GameApplication.h  GameObject.h  Light.h  Material.h  Mesh.h  ModelLoading.h  Renderer.h  Shader.h  Texture.h  Transform.h  Vertex.h
GameApplication/src/: GameApplication.cpp  GameObject.cpp  Material.cpp  Mesh.cpp  ModelLoading.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Transform.cpp
assets/models/: cube.nff  utah-teapot.fbx
assets/shaders/: lightFS.glsl  lightTextureFS.glsl  lightVS.glsl  parallaxMappingFS.glsl  parallaxMappingFS2.glsl  parallaxMappingVS.glsl  simpleFS.glsl  simpleVS.glsl  textureFS.glsl
cmake/: FindGLM.cmake  FindSDL2.cmake  FindSDL2_Image.cmake  FindSDL2_TTF.cmake  FindTinyXML.cmake  FindTinyXML2.cmake  Findassimp.cmake
include/: MyGame.h
src/: MyGame.cpp  main.cpp
